--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   fluro: "^1.5.1"
+  mobx: ^0.3.9+3
+  flutter_mobx: ^0.3.3+3
+  provider: ^2.0.1+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  source_gen:
+  mobx_codegen:
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -39,9 +45,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
