--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+    <uses-permission android:name="android.permission.ACTION_CREATE_NOTE" />
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="smart_shopping"
@@ -27,6 +28,11 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+            <intent-filter>
+               <action android:name="com.google.android.gms.actions.CREATE_NOTE"/>
+               <category android:name="android.intent.category.DEFAULT"/>
+               <data android:mimeType="text/plain"/>
             </intent-filter>
         </activity>
     </application>
