--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   provider: ^2.0.1+1
   dio: ^3.0.6
   dio_flutter_transformer: ^3.0.2
+  flutter_typeahead: ^1.7.0
+  translator: ^0.1.2
 
 dev_dependencies:
   flutter_test:
