--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   dio_flutter_transformer: ^3.0.2
   flutter_typeahead: ^1.7.0
   translator: ^0.1.2
+  google_maps_flutter: ^0.5.21+12
+  location: ^2.3.5
 
 dev_dependencies:
   flutter_test:
